Don't offer as upgrades versions of a plugin that aren't compatible with this GATE.